--- a/DublinBike/DublinBike/appsettings.Development.json
+++ b/DublinBike/DublinBike/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MvcBikeContext": "Server=(localdb)\\mssqllocaldb;Database=MvcBikeContext-2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
